test/types/locale/bradc/createNewLocale.good
createNewLocale.chpl:1: error: cannot create instances of the 'locale' class
